# Resume_Analyzer_tracker

./: README.md
.github/workflows/: ci.yml
backend/: Dockerfile  Readme.md  pyproject.toml
backend/app/: main.py
backend/app/api/: applications.py  batch.py  scoring.py
backend/app/core/: database.py
backend/app/models/: application.py  resume.py  score.py
backend/app/services/: batch.py  batch_analyzer.py  resume_parser.py  scoring.py
backend/resume_analyzer_tracker_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
data/: jobs.csv
infra/: docker-compose.yml
