[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "resume-analyzer-tracker-backend"
version = "0.1.0"
description = "FastAPI backend for resume analyzer and job application tracker"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Sonai Biswas" }]

dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.23",
  "python-multipart>=0.0.9",

  "pydantic>=2.0",

  "sqlalchemy>=2.0",

  "pypdf>=4.0",

  "scikit-learn>=1.3",
  "nltk>=3.8",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6",
  "pytest>=8.0",
  "httpx>=0.27",
]

[tool.setuptools]
# Your Python package is `app` located inside `backend/app`
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"